:lipstick: new bagground with doark mode variant :lipstick: add animation on light / dark mode switch :bug: fix sidebar flex on sfari

--- a/src/index.scss
+++ b/src/index.scss
@@ -3,7 +3,7 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-align: center;
-  @apply text-ab-gray;
+  @apply text-ab-gray transition duration-1000;
 }
 
 ::-webkit-scrollbar {
